--- a/_sass/addon/variables.scss
+++ b/_sass/addon/variables.scss
@@ -28,8 +28,10 @@ $code-dot-gap: 0.5rem !default;
 $code-icon-width: 1.75rem !default;
 
 /* fonts */
-//$font-family-base: 'Source Sans Pro', 'Microsoft Yahei', sans-serif !default;
-$font-family-base: '', '', sans-serif !default;
 
-//$font-family-heading: Lato, 'Microsoft Yahei', sans-serif !default;
-$font-family-heading: Lato, '', sans-serif !default;
+/* font-family-base: 'Source Sans Pro', 'Microsoft Yahei', sans-serif !default; */
+$font-family-base: 'Microsoft Yahei', sans-serif !default;
+
+/* $font-family-heading: Lato, 'Microsoft Yahei', sans-serif !default;*/
+
+$font-family-heading: Lato, 'Microsoft Yahei', sans-serif !default;
