--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -796,7 +796,8 @@ $btn-mb: 0.5rem;
         display: flex;
         align-items: center;
         border-radius: 0.75rem;
-        font-weight: 600;
+        font-weight: 500;
+        font-size: 0.9rem;
 
         &:hover {
           background-color: var(--sidebar-hover-bg);
