--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -94,6 +94,17 @@
       {% endif %}
     {% endfor %}
   </div>
+  <!-- Start Partnerprogramm ALL-INKL.COM -->
+  <div>
+    <a target="_blank" href="https://all-inkl.com/PA908E76EBCAD40">
+      <img
+        width="130px"
+        src="https://all-inkl.com/banner/all-inkl_banner_185x35_black.gif"
+        alt="ALL-INKL.COM - Webhosting Server Hosting Domain Provider"
+    ></a>
+  </div>
+
+  <!-- Ende Partnerprogramm -->
   <!-- .sidebar-bottom -->
 </aside>
 <!-- #sidebar -->
